@@ -3,6 +3,14 @@
 	PR1983: Support using the system installation
 	of NSS with the SunEC provider
 	* Makefile.am:
+	(check-ecc): Make argument dependent on whether
+	the SunEC provider is enabled or not.
+
+2016-01-29  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	PR1983: Support using the system installation
+	of NSS with the SunEC provider
+	* Makefile.am:
 	(check-ecc): Argument passed to the test should
 	now be "yes".
 
